Reduce installer complexity

--- a/packages/calamares-extensions/config/modules/users.conf
+++ b/packages/calamares-extensions/config/modules/users.conf
@@ -39,48 +39,15 @@ defaultGroups:
     - networkmanager
     - wheel
 
-# When *sudoersGroup* is set to a non-empty string, Calamares creates a
-# sudoers file for the user. This file is located at:
-#     `/etc/sudoers.d/10-installer`
-# Remember to add the (value of) *sudoersGroup* to *defaultGroups*.
-#
-# If your Distribution already sets up a group of sudoers in its packaging,
-# remove this setting (delete or comment out the line below). Otherwise,
-# the setting will be duplicated in the `/etc/sudoers.d/10-installer` file,
-# potentially confusing users.
-# sudoersGroup:    wheel
-
-# Some Distributions require a 'autologin' group for the user.
-# Autologin causes a user to become automatically logged in to
-# the desktop environment on boot.
-# Disable when your Distribution does not require such a group.
-# autologinGroup:  autologin
-
-
 ### ROOT AND SUDO
 #
 # Some distributions have a root user enabled for login. Others
 # rely entirely on sudo or similar mechanisms to raise privileges.
 
-# If set to `false` (the default), writes a sudoers file with `ALL=(ALL)`
-# so that commands can be run as any user. If set to `true`, writes
-# `ALL=(ALL:ALL)` so that any user and any group can be chosen.
-# sudoersConfigureWithGroup: false
-
 # Setting this to false, causes the root account to be disabled.
 # When disabled, hides the "Use the same password for administrator"
 # checkbox. Also hides the "Choose a password" and associated text-inputs.
-setRootPassword: true
-
-# You can control the initial state for the 'reuse password for root'
-# checkbox here. Possible values are:
-#  - true to check or
-#  - false to uncheck
-#
-# When checked, the user password is used for the root account too.
-#
-# NOTE: *doReusePassword* requires *setRootPassword* to be enabled.
-doReusePassword: false
+setRootPassword: false
 
 
 ### PASSWORDS AND LOGIN
@@ -98,94 +65,7 @@ doReusePassword: false
 #  - true to check or
 #  - false to uncheck
 # These set the **initial** state of the checkbox.
-doAutologin:     false
-
-# These are optional password-requirements that a distro can enforce
-# on the user. The values given in this sample file set only very weak
-# validation settings.
-#
-# Calamares itself supports two checks:
-#   - minLength
-#   - maxLength
-# In this sample file, the values are set to -1 which means "no
-# minimum", "no maximum". This allows any password at all.
-# No effort is done to ensure that the checks are consistent
-# (e.g. specifying a maximum length less than the minimum length
-# will annoy users).
-#
-# Calamares supports password checking through libpwquality.
-# The libpwquality check relies on the (optional) libpwquality library.
-# The value for libpwquality is a list of configuration statements like
-# those found in pwquality.conf. The statements are handed off to the
-# libpwquality parser for evaluation. The check is ignored if
-# libpwquality is not available at build time (generates a warning in
-# the log). The Calamares password check rejects passwords with a
-# score of < 40 with the given libpwquality settings.
-#
-# (additional checks may be implemented in CheckPWQuality.cpp and
-# wired into UsersPage.cpp)
-#
-# To disable all password validations:
-#  - comment out the relevant 'passwordRequirements' keys below,
-#    or set minLength and maxLength to -1.
-#  - disable libpwquality at build-time.
-# To allow all passwords, but provide warnings:
-#  - set both 'allowWeakPasswords' and 'allowWeakPasswordsDefault' to true.
-#    (That will show the box *Allow weak passwords* in the user-
-#    interface, and check it by default).
-#  - configure password-checking however you wish.
-# To require specific password characteristics:
-#  - set 'allowWeakPasswords' to false (the default)
-#  - configure password-checking, e.g. with NIST settings
-
-
-# These are very weak -- actually, none at all -- requirements
-passwordRequirements:
-    minLength: 1  # Password at least this many characters
-    maxLength: -1  # Password at most this many characters
-    libpwquality:
-        - minlen=0
-        - minclass=0
-
-# These are "you must have a password, any password" -- requirements
-#
-# passwordRequirements:
-#     minLength: 1
-
-# These are requirements the try to follow the suggestions from
-#     https://pages.nist.gov/800-63-3/sp800-63b.html , "Digital Identity Guidelines".
-# Note that requiring long and complex passwords has its own cost,
-# because the user has to come up with one at install time.
-# Setting 'allowWeakPasswords' to false and 'doAutologin' to false
-# will require a strong password and prevent (graphical) login
-# without the password. It is likely to be annoying for casual users.
-#
-# passwordRequirements:
-#     minLength: 8
-#     maxLength: 64
-#     libpwquality:
-#         - minlen=8
-#         - maxrepeat=3
-#         - maxsequence=3
-#         - usersubstr=4
-#         - badwords=linux
-
-# You can control the visibility of the 'strong passwords' checkbox here.
-# Possible values are:
-#  - true to show or
-#  - false to hide  (default)
-# the checkbox. This checkbox allows the user to choose to disable
-# password-strength-checks. By default the box is **hidden**, so
-# that you have to pick a password that satisfies the checks.
-allowWeakPasswords: true
-# You can control the initial state for the 'strong passwords' checkbox here.
-# Possible values are:
-#  - true to uncheck or
-#  - false to check (default)
-# the checkbox by default. Since the box is labeled to enforce strong
-# passwords, in order to **allow** weak ones by default, the box needs
-# to be unchecked.
-allowWeakPasswordsDefault: false
+doAutologin:     true
 
 
 # User settings
@@ -252,7 +132,7 @@ user:
 #   always contains "localhost", but may list others that are unsuitable
 #   or broken in special ways.
 hostname:
-  location: None
+  location: Transient
   writeHostsFile: false
   forbidden_names: [ localhost ]
 
