--- a/packages/calamares-extensions/config/modules/welcome.conf
+++ b/packages/calamares-extensions/config/modules/welcome.conf
@@ -20,10 +20,8 @@
 # The setting can also be a full URL which will then be used
 # instead of the one from the branding file.
 showSupportUrl:         true
-showKnownIssuesUrl:     true
-showReleaseNotesUrl:    true
-# TODO:3.3 Move to branding, keep only a bool here
-# showDonateUrl:          https://kde.org/community/donations/
+showKnownIssuesUrl:     false
+showReleaseNotesUrl:    false
 
 # Requirements checking. These are general, generic, things
 # that are checked. They may not match with the actual requirements
@@ -32,32 +30,17 @@ requirements:
     # Amount of available disk, in GiB. Floating-point is allowed here.
     # Note that this does not account for *usable* disk, so it is possible
     # to satisfy this requirement, yet have no space to install to.
-    requiredStorage:    10
+    requiredStorage:    64
 
     # Amount of available RAM, in GiB. Floating-point is allowed here.
-    requiredRam:        1.0
+    requiredRam:        4.0
 
     # To check for internet connectivity, Calamares does a HTTP GET
     # on this URL; on success (e.g. HTTP code 200) internet is OK.
     # Use a privacy-respecting URL here, preferably in your distro's domain.
     #
     # The URL is only used if "internet" is in the *check* list below.
-    internetCheckUrl: [ https://geoip.kde.org/v1/calamares, https://cache.nixos.org/ ]
-    #
-    # This may be a single URL, or a list or URLs, in which case the
-    # URLs will be checked one-by-one; if any of them returns data,
-    # internet is assumed to be OK. This can be used to check via
-    # a number of places, where some domains may be down or blocked.
-    #
-    # To use a list of URLs, just use YAML list syntax (e.g.
-    #
-    # internetCheckUrl:
-    #     - http://www.kde.org
-    #     - http://www.freebsd.org
-    #
-    # or short-form
-    #
-    # internetCheckUrl: [ http://www.kde.org, http://www.freebsd.org ]
+    internetCheckUrl: [ https://nixup.io, https://cache.nixos.org/ ]
 
     # List conditions to check. Each listed condition will be
     # probed in some way, and yields true or false according to
