Generate random hostname. One less thing to ask the user.

--- a/packages/calamares-extensions/config/modules/users.conf
+++ b/packages/calamares-extensions/config/modules/users.conf
@@ -132,7 +132,7 @@ user:
 #   always contains "localhost", but may list others that are unsuitable
 #   or broken in special ways.
 hostname:
-  location: Transient
+  location: None
   writeHostsFile: false
   forbidden_names: [ localhost ]
 
