Disable full disk encryption for now

--- a/packages/calamares-extensions/config/modules/partition.conf
+++ b/packages/calamares-extensions/config/modules/partition.conf
@@ -7,10 +7,10 @@ efi:
   label: "EFI"
 userSwapChoices:
   - suspend
-luksGeneration: luks2
 drawNestedPartitions: false
 alwaysShowPartitionLabels: true
 allowManualPartitioning: false
+# FIXME(m): Consider accidentally erasing an existing system
 # Initial selection on the Choice page
 #
 # There are four radio buttons (in principle: erase, replace, alongside, manual),
@@ -26,9 +26,5 @@ initialSwapChoice: suspend
 requiredPartitionTableType: gpt
 partitionLayout:
     - filesystem: "ext4"
-      noEncrypt: false
       mountPoint: "/"
       size: 100%
-enableLuksAutomatedPartitioning: true
-# FIXME(m): This does not seem to work
-preCheckEncryption: true
