Don't default to potentially dangerous "erase" for installer initialPartitioningChoice

--- a/packages/calamares-extensions/config/modules/partition.conf
+++ b/packages/calamares-extensions/config/modules/partition.conf
@@ -22,7 +22,7 @@ allowManualPartitioning: false
 #
 # The default is "none"
 #
-initialPartitioningChoice: erase
+initialPartitioningChoice: none
 initialSwapChoice: suspend
 requiredPartitionTableType: gpt
 partitionLayout:
