Apply customization for EU edition

--- a/packages/calamares-extensions/config/modules/partition.conf
+++ b/packages/calamares-extensions/config/modules/partition.conf
@@ -8,6 +8,7 @@ efi:
   label: "EFI"
 userSwapChoices:
   - suspend
+luksGeneration: luks2
 drawNestedPartitions: false
 alwaysShowPartitionLabels: true
 allowManualPartitioning: false
@@ -26,5 +27,9 @@ initialSwapChoice: suspend
 requiredPartitionTableType: gpt
 partitionLayout:
     - filesystem: "ext4"
+      noEncrypt: false
       mountPoint: "/"
       size: 100%
+enableLuksAutomatedPartitioning: true
+# FIXME(m): This does not seem to work
+preCheckEncryption: true
