--- a/packages/calamares-extensions/config/modules/users.conf
+++ b/packages/calamares-extensions/config/modules/users.conf
@@ -5,9 +5,8 @@
 defaultGroups:
   - users
   - networkmanager
-  - wheel
-setRootPassword: false
-doAutologin: true
+setRootPassword: true
+doAutologin: false
 user:
   shell: /run/current-system/sw/bin/bash
   forbidden_names: [ root ]
