--- a/packages/calamares-extensions/config/modules/welcome.conf
+++ b/packages/calamares-extensions/config/modules/welcome.conf
@@ -8,7 +8,7 @@ showReleaseNotesUrl: false
 requirements:
   requiredStorage:    60
   requiredRam:        4.0
-  internetCheckUrl: [ https://nixup.io, https://cache.nixos.org/ ]
+  internetCheckUrl: [ https://www.edps.europa.eu, https://cache.nixos.org/ ]
   check:
     - storage
     - ram
